# priority-kb

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHATLOG.md  CLAUDE.md  CLOSE_SESSION_PROTOCOL.md  Makefile  README.md  SESSION_PROTOCOL.md  WORKFLOW.md  commitlint.config.cjs  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.ts  vitest.e2e.config.ts
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pr-title-normalize.yml  pr-title.yml  release-pr-autotitle.yml  security.yml  stacked-pr-baseref-check.yml
api/: __init__.py  entries.py  jobs.py  log.py  log_event.py  main.py  worker.py
api/handlers/: __init__.py  ingest_api_client.py  media_ingest.py  types.py
api/ocr/: __init__.py  azure.py  factory.py  fallback.py  stub.py  tesseract.py  types.py
api/parsers/: __init__.py  docx.py  pdf.py  types.py
api/tests/: __init__.py  test_handlers_init.py  test_handlers_media_ingest.py  test_healthz.py  test_iron_rule_8_no_live_api_imports.py  test_jobs.py  test_log.py  test_log_event.py  test_ocr_azure.py  test_ocr_factory.py  test_ocr_fallback.py  test_ocr_stub.py  test_ocr_tesseract.py  test_parsers.py  test_worker.py
api/tests/fixtures/: azure_di_layout_real.redacted.json  sample-empty.docx  sample-hebrew.docx  sample.docx
app/: layout.tsx  page.tsx
app/admin/entries/: page.test.ts  page.tsx
app/admin/entries/[id]/edit/: EditForm.tsx  page.tsx
app/admin/entries/[id]/history/: page.tsx
app/admin/entries/[id]/history/[versionNo]/: RevertForm.tsx  page.tsx
app/admin/ingest/: page.tsx
app/admin/ingest/direct/: page.tsx
app/admin/stale-entries/: page.tsx
app/admin/tags/: DeleteForm.tsx  MergeForm.tsx  RenameForm.tsx  page.tsx
app/api/admin/tags/: route.test.ts  route.ts
app/api/admin/tags/delete/: route.test.ts  route.ts
app/api/admin/tags/merge/: route.test.ts  route.ts
app/api/admin/tags/rename/: route.test.ts  route.ts
app/api/agent/ingest/: route.test.ts  route.ts
app/api/ingest/: route.test.ts  route.ts
app/api/ingest/[id]/: route.test.ts  route.ts
app/api/ingest/upload/: route.test.ts  route.ts
app/api/retrieve/: route.test.ts  route.ts
app/entries/[id]/: not-found.tsx  page.tsx
app/healthz/: route.test.ts  route.ts
app/query/: page.tsx
components/: Button.test.tsx  Button.tsx
db/: init.sql
docs/: A11Y.md  AGENTS.md  BACKLOG.md  CHATLOG_ARCHIVE.md  PYTHON_RULES_DRAFT.md  ROADMAP.md  UI_AUDIT.md
docs/adr/: 0001-bootstrap.md  0002-branching-and-merge-policy.md  0003-ci-security-gates-baseline.md  0004-pr-title-mechanical-floor.md  0005-log-event-schema.md  0006-process-alignment-with-external-audit.md  0007-language-policy-always-english.md  0008-orm-and-migration-ownership.md  0009-chunking-strategy.md  0010-admin-ingestion-agent-chat-ui.md  0011-repo-visibility.md  0012-retrieval-pipeline.md  0013-hybrid-rrf-tsvector.md  0014-e2e-page-status-tests.md  0015-back-nav-e2e-runner.md  0016-python-rules-adoption.md  0017-protocol-split-closing.md  0018-python-logging-primitive.md  0019-job-queue.md  0020-python-log-event-emitter.md  0021-worker-http-callback-architecture.md  0022-ocr-adapter.md  0023-image-processing-caption-region-contract.md  0024-pii-scrub-stronger-pass.md  0025-tag-management.md  0026-design-system-tokens-and-brand-loading.md  0027-m5-production-foundation-hosting-and-entra-auth.md  README.md
docs/runbooks/: backup.md  media-smoke.md
docs/spikes/: hebrew-ocr-spike.md
drizzle/: schema.ts
drizzle/migrations/: 0000_baseline.sql  0001_updated_at_triggers.sql  0002_unaccent_tsv_trigger.sql  0003_entries_tsv_gin_idx.sql  0004_jobs.sql  0005_entries_caption.sql  0006_entries_updated_at_id_idx.sql  0007_entries_last_verified_at_id_idx.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
evals/: fixture-ids.test.ts  fixture-ids.ts  golden_set.yaml  lib.test.ts  lib.ts  run-adapter.ts  run.test.ts  run.ts  schema.test.ts  schema.ts
lib/: admin-tags.test.ts  admin-tags.ts  agent-chat-state.test.ts  agent-chat-state.ts  agents-anthropic.test.ts  agents-anthropic.ts  agents-tools.test.ts  agents-tools.ts  agents.test.ts  agents.ts  auth.test.ts  auth.ts  blob-storage.test.ts  blob-storage.ts  brand.ts  caption.test.ts  caption.ts  chunk.test.ts  chunk.ts  db.ts  degraded-copy.test.ts  degraded-copy.ts  edit-form-helpers.test.ts  edit-form-helpers.ts  embedding-voyage.test.ts  embedding-voyage.ts  embedding.test.ts  embedding.ts  entries.test.ts  entries.ts  ingest-schema.ts  ingest.test.ts  ingest.ts  iso-date.test.ts  iso-date.ts  jobs.test.ts  jobs.ts  keyword-tsquery.test.ts  keyword-tsquery.ts  log.test.ts  (+43 more)
prompts/: ingestion-agent.md  retrieval-agent.md
scripts/: backup-db.ps1  check-pr-title-allowlist-drift.mjs  check-repo-public-banner.mjs  cleanup-jobs.mjs  hebrew-ocr-spike.mjs  hook-gh-pr-create-precheck.mjs  hook-gh-pr-merge-block.mjs  hook-prettier-write.mjs  media_smoke.py  precheck-pr-title.mjs  precheck-test-count-vs-precedent.mjs  recovery-restore-hebrew-tag.ts  revert-to-private.mjs  seed-synthetic-entries.ts  start-test-server.ts  verify-roadmap-tickboxes.mjs
styles/: brand-tokens.test.ts  contrast.test.ts  fonts.test.ts  kramer-brand.css
tests/: entries-page.e2e.test.ts  entries.integration.test.ts  hook-gh-pr-merge-block.test.ts  hook-prettier-write.test.ts  ingest.integration.test.ts  jobs.integration.test.ts  migration.test.ts  precheck-pr-title.test.ts  retrieval-ann.integration.test.ts  retrieval-keyword.integration.test.ts  retrieval-pipeline.integration.test.ts  smoke.test.ts  tags.integration.test.ts  upload.integration.test.ts
tests/fixtures/: hang-prettier.mjs
tests/scripts/: check-pr-title-allowlist-drift.test.ts  cleanup-jobs.test.ts  precheck-test-count-vs-precedent.test.ts  revert-to-private.test.ts  verify-roadmap-tickboxes.test.ts
