# Python config — activated when M2b adds the FastAPI worker for document parsing/OCR/embedding jobs.
# Until then, this file documents the future tooling shape so the contract is visible from day one.

[project]
name = "priority-kb-api"
version = "0.0.1"
description = "FastAPI worker for ingestion: document parsing, OCR, embedding, Claude calls, DB writes."
requires-python = ">=3.12"
dependencies = [
  # Pinned in M2b. Anticipated:
  # "fastapi",
  # "uvicorn[standard]",
  # "sqlalchemy",
  # "alembic",
  # "psycopg[binary]",
  # "pgvector",
  # "pgqueuer",
  # "anthropic",
  # "voyageai",
  # "azure-ai-documentintelligence",
  # "pypdf",
  # "pillow",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "--cov=api --cov-report=term-missing"
testpaths = ["api/tests"]
