# Python config — activated 2026-05-26 at M2b #2 (FastAPI worker scaffold).
# Subsequent M2b items pin additional deps (job queue, parsing, OCR, SDKs).

[project]
name = "priority-kb-api"
version = "0.0.1"
description = "FastAPI worker for ingestion: document parsing, OCR, embedding, Claude calls, DB writes."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.48.0",
  # Pinned per M2b item. Anticipated additions:
  # "sqlalchemy",
  # "alembic",
  # "psycopg[binary]",
  # "pgvector",
  # "pgqueuer",
  # "anthropic",
  # "voyageai",
  # "azure-ai-documentintelligence",
  # "pypdf",
  # "pillow",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # TestClient transitive dep — pinned explicitly so the resolver doesn't
  # gamble with fastapi/starlette's version floor.
  "httpx==0.28.1",
]

# Setuptools sits at the repo root alongside Node-side directories (app/, lib/, evals/, etc.).
# Flat-layout autodiscovery would try to package those too — explicitly scope to api/.
[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["api.tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "--cov=api --cov-report=term-missing"
testpaths = ["api/tests"]
