# Python config — activated 2026-05-26 at M2b #2 (FastAPI worker scaffold).
# Subsequent M2b items pin additional deps (job queue, parsing, OCR, SDKs).

[project]
name = "priority-kb-api"
version = "0.0.1"
description = "FastAPI worker for ingestion: document parsing, OCR, embedding, Claude calls, DB writes."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.48.0",
  # ADR-0019 M2b #3 — Postgres async driver for the job-queue worker.
  # psycopg v3 chosen over asyncpg per ADR-0008's minimum-surface posture;
  # psycopg's sync+async symmetry pays off when M2b #5+ parsing pipelines
  # don't need async, and pgvector's psycopg adapter lands cleanly here.
  "psycopg[binary]==3.2.3",
  # M2b #5 — PDF + DOCX parsing (per ADR-0021 §"Option Y" architecture choice).
  # pypdf is pure-Python (no native build); python-docx imports as `docx`.
  "pypdf==6.12.2",
  "python-docx==1.2.0",
  # M2b #5 PR pair 2 — worker→Node HTTP callback for the Option Y ingest path.
  # Promoted from [project.optional-dependencies].dev (where it landed at
  # M2b #3 as a TestClient transitive) because PR pair 2 wires a runtime
  # caller in api/handlers/ingest_api_client.py. Pin stays at 0.28.1.
  "httpx==0.28.1",
  # Pinned per M2b item. Anticipated additions:
  # "sqlalchemy",
  # "alembic",
  # "pgvector",
  # "anthropic",
  # "voyageai",
  # "azure-ai-documentintelligence",
  # "pillow",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # ADR-0019 M2b #3 — api/jobs.py is async; api/tests/test_jobs.py needs
  # the @pytest.mark.asyncio marker + pytest_asyncio fixture decorator.
  "pytest-asyncio>=0.24",
  # httpx promoted to [project.dependencies] at M2b #5 — runtime caller in
  # api/handlers/ingest_api_client.py. Still resolved here for dev installs
  # by transitivity through fastapi's TestClient.
]

# Setuptools sits at the repo root alongside Node-side directories (app/, lib/, evals/, etc.).
# Flat-layout autodiscovery would try to package those too — explicitly scope to api/.
[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["api.tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# psycopg + pytest_asyncio ship typed; no mypy override needed.
# Sandbox must `pip install -e ".[dev]"` (or the explicit deps
# `psycopg[binary]==3.2.3 pytest-asyncio>=0.24`) for mypy --strict to
# resolve their stubs. CI does this via the python job's install step;
# local devs should mirror it. The previous version of this block
# added a blanket `ignore_missing_imports = true` override for both
# libs, which masked CI's "Unused type: ignore" errors and caused the
# untyped-decorator regression that broke the first PR2 CI run.

[tool.pytest.ini_options]
addopts = "--cov=api --cov-report=term-missing"
testpaths = ["api/tests"]
# ADR-0019 M2b #3 — pytest-asyncio strict mode (per the lib's recommended
# default; opt-in `@pytest.mark.asyncio` on each async test rather than
# auto-running every `async def`).
asyncio_mode = "strict"
